--- a/ExpenseTracking.API/appsettings.json
+++ b/ExpenseTracking.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MsSql_ExpenseTracking_DB": "Data Source=DESKTOP-T5GQEJN;Initial Catalog=ExpenseTrackingDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
